[gd_scene load_steps=3 format=3 uid="uid://dn5qmomg70bsw"]

[ext_resource type="Script" path="res://deckbuilder/Deckbuilder.gd" id="1_ny61o"]
[ext_resource type="PackedScene" uid="uid://c6a7g6p6nipw5" path="res://player/ZoomPreview.tscn" id="2_cwaqj"]

[node name="Deckbuilder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ny61o")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FilteredCardsScroller" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FilteredCards" type="VBoxContainer" parent="HBoxContainer/FilteredCardsScroller"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardCollectionLabel" type="Label" parent="HBoxContainer/FilteredCardsScroller/FilteredCards"]
layout_mode = 2
size_flags_horizontal = 4
text = "Card collection"

[node name="CardsInDeckScroller" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardsInDeck" type="VBoxContainer" parent="HBoxContainer/CardsInDeckScroller"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeckLabel" type="Label" parent="HBoxContainer/CardsInDeckScroller/CardsInDeck"]
layout_mode = 2
text = "Deck"

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ZoomPreview" parent="HBoxContainer/PanelContainer" instance=ExtResource("2_cwaqj")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
